заменил свг, добавил тени

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,20 +26,29 @@
 				<a class="link" href="#address">Контакты</a>
 				</li>
 			</ul>
-		</nav>
-		<!--контакты-->
-		<ul class="contacts list">
-			<div class="icom-mail"></div>
-			<li class="item">
-			<a class="link" href="mailto:info@devstudio.com">info@devstudio.com
-			</a>
+			</nav>
+			<!--контакты-->
+			<ul class="contacts list">
+				<li class="contacts-item">
+				<a class="link" href="mailto:info@devstudio.com">
+					<svg class="contacts-icon"width="16" height="12" viewBox="0 0 43 32">
+						<use href="./images/symbol-defs.svg#icon-envelope-hover"></use>
+					</svg>
+				info@devstudio.com
+				</a>
+		
+				</li>
+				<div class="icom-tel"></div>
+				<li class="contacts-item">
+				<a class="link" href="tel:+380961111111">
+					<svg class="contacts-icon"width="10" height="16" viewBox="0 0 20 32">
+						<use href="./images/symbol-defs.svg#icon-smartphone"></use>
+					</svg>
+				+38 096 111 11 11
+				</a>
 			</li>
-			<div class="icom-tel"></div>
-			<li class="item">
-			<a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-		</li>
-		</ul></div>
-			</header>  	
+			</ul></div>
+			</header>  
 		<main>
 			<!-- Уникальный контент -->
 			<section class="galerry">
@@ -55,9 +64,11 @@
 
 				<ul class="list">
 					<li class="galerry-card">
+						<div class="box shadow1">
 					<a class="link " href=""><img src="./images/portfolio/project1.jpg" alt="projekt1" width="370"/>
 						<div class="info"><h2 class="titel">Технокряк</h2>
 						<p>Веб-сайт</p></div></a>
+					</div>
 					</li>
 					<li class="galerry-card">
 						<a class="link " href=""><img src="./images/portfolio/project2.jpg" alt="projekt2" width="370"/>
