--- a/index.html
+++ b/index.html
@@ -29,53 +29,81 @@
     </nav>
     <!--контакты-->
     <ul class="contacts list">
-        <div class="icom-mail"></div>
-        <li class="item">
-        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com
+        <li class="contacts-item">
+        <a class="link" href="mailto:info@devstudio.com">
+            <svg class="contacts-icon"width="16" height="12" viewBox="0 0 43 32">
+                <use href="./images/symbol-defs.svg#icon-envelope-hover"></use>
+            </svg>
+        info@devstudio.com
         </a>
+
         </li>
         <div class="icom-tel"></div>
-        <li class="item">
-        <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="contacts-item">
+        <a class="link" href="tel:+380961111111">
+            <svg class="contacts-icon"width="10" height="16" viewBox="0 0 20 32">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            </svg>
+        +38 096 111 11 11
+        </a>
     </li>
     </ul></div>
     </header>  
     <main>
     <!-- Блок Герой -->
     <section class="hero">
-    <div class="container">
         <h1 class="hero-titel">
             Эффективные решения <br />
             для вашего бизнеса
         </h1>
-        <button class="button" type="button">Заказать услугу</button></div>
+        <button class="button-hero" type="button">Заказать услугу</button></div>
     </section>
     <!-- Наши приимущества -->
     <section class="advantages">
     <div class="container"><h2 class="hidden">Наши приимущества</h2>
     <ul class="list">
-            <li class="list-item">
+            <li class="advantages-list">
+                <div class="advantages-svg">
+                    <svg class="advantages-icon"width="70" height="70" viewBox="0 0 32 32">
+                        <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                    </svg>
+                </div>
             <h3 class="titel">Внимание к деталям</h3>
-            <p class="text">
+            <p class="advantages-text">
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
         </p>
         </li>
-        <li class="list-item">
+        <li class="advantages-list">
+            <div class="advantages-svg">
+                <svg class="advantages-icon"width="70" height="70" viewBox="0 0 32 32">
+                    <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                </svg>
+            </div>
             <h3 class="titel">Пунктуальность</h3>
             <p class="text">
             Задача организации, в особенности же рамки и место обучения кадров
             влечет за собой.
         </p>
         </li>
-        <li class="list-item">
+        <li class="advantages-list">
+            <div class="advantages-svg">
+                <svg class="advantages-icon"width="70" height="70" viewBox="0 0 32 32">
+                    <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                </svg>
+            </div>
             <h3 class="titel">Планирование</h3>
             <p class="text">
             Равным образом консультация с широким активом в значительной
             степени обуславливает.
         </p>
         </li>
-        <li class="list-item">
+        <li class="advantages-list">
+            <div class="advantages-svg">
+                <svg class="advantages-icon"width="70" height="70" viewBox="0 0 32 32">
+                    <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                </svg>
+            </div>
         <h3 class="titel">Современные технологии</h3>
         <p class="text">
             Значимость этих проблем настолько очевидна, что реализация
